<resources>
    <string name="app_name">GB weight tracker</string>
    <string-array name="when">
        <item>@string/now</item>
        <item>@string/yesterday</item>
        <item>@string/twoDaysAgo</item>
    </string-array>

    <string name="fileNotFound">File not found</string>
    <string name="checkLocationName">Check file location and name and try again</string>
    <string name="noEntriesToLoad">No entries to load</string>
    <string name="overwrite">Loading info</string>
    <string name="overwriteInfo">Loading data will overwrite existing entries. Make sure the file is in Documents directory and copy file\'s name</string>
    <string name="fileName">File name</string>
    <string name="kgs" translatable="false">" kg"</string>
    <string name="lbs" translatable="false">" lb"</string>
    <string name="selectUnits">Select units</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="conversion">Conversion</string>
    <string name="conversionMsg">Do you want to convert existing values?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="deleteAll">Delete all entries</string>
    <string name="deleteAllMsg">Are you sure you want to delete all entries?</string>
    <string name="load">Load</string>
    <string name="save">Save</string>
    <string name="insertName">Insert file name</string>
    <string name="dataSavedIn">Data saved in</string>
    <string name="settings">Settings</string>
    <string name="startingWeight">Starting weight</string>
    <string name="startingWeightMsg">The starting weight for this goal would be the last weight reading provided</string>
    <string name="setNewGoal">Set new goal</string>
    <string name="set">Set</string>
    <string name="insertWeight">Insert weight</string>
    <string name="goalZero">Goal cannot be set to 0</string>
    <string name="pressAgain">Press back again to exit</string>
    <string name="drawVerticalGrid">Draw vertical grid lines</string>
    <string name="drawHorizontalGrid">Draw horizontal grid lines</string>
    <string name="drawHighlight">Draw highligh indicators</string>
    <string name="gbWeightTracker" translatable="false">GB weight tracker</string>
    <string name="weight">Weight</string>
    <string name="note">Note</string>
    <string name="when">When</string>
    <string name="add">Add</string>
    <string name="date">Date</string>
    <string name="delete">Delete</string>
    <string name="goal">goal</string>
    <string name="startingDate">Starting date:</string>
    <string name="startingWeightTxt">Starting weight:</string>
    <string name="progress">progress</string>
    <string name="last">change</string>
    <string name="deleteGoal">Delete goal</string>
    <string name="units">Units</string>
    <string name="now">Now</string>
    <string name="yesterday">Yesterday</string>
    <string name="twoDaysAgo">2 days ago</string>
    <string name="setGoal">Set new goal</string>
    <string name="permissions">Permissions</string>
    <string name="permissionsMsg">In order to save or load a file this app needs to be granted permission to access storage</string>
    <string name="readigFirst">Add a weight reading first</string>
    <string name="deleting">Deleting entry</string>
    <string name="deletingMsg">Are you sure you want to delete this entry?</string>
    <string name="notBeforeFirst">Cannot add values before the first weight input</string>
    <string name="no">No</string>
    <string name="days">days</string>
    <string name="day">day</string>
    <string name="optional">optional</string>
    <string name="edit">Edit</string>
    <string name="sureDeleteThisBodyPart">Are you sure you want do delete this body part?</string>
    <string name="measurements">Measurements</string>
    <string name="name">Name</string>
    <string name="addNewBodyPart">Add new body part</string>
    <string name="newMeasurement">"New measurement - "</string>
    <string name="newName">New name</string>
    <string name="editBodyPart">Edit body part</string>
    <string name="sureDeleteThisMeasurement">Are you sure you want to delete this measurement</string>
    <string name="measurement">measurement</string>
    <string name="errorValue">Error - insert measurement value</string>
    <string name="errorBodyPart">Error - insert body part name</string>
    <string name="noDataToSave">No data to save</string>
    <string name="average">average</string>
    <string name="perWeek">per week</string>
    <string name="noBodyPartsToLoad">No body parts to load</string>
    <string name="skip">skip</string>
    <string name="deleteAllThisDay">Delete this day</string>
    <string name="longClickToAddBodyPart">Long click the button to add body part first</string>
    <string name="editMeasurement">"Edit measurement - "</string>
    <string name="signIn">Sign in</string>
    <string name="signOut">Sign out</string>
    <string name="signedInAs">Signed in as</string>
    <string name="signedOut">Signed out</string>
    <string name="errorSigningIn">Error signing in</string>
    <string name="connectToGoogleFit">Connect to Google Fit</string>
    <string name="connectedToGoogleFit">Connected to Google Fit</string>
    <string name="addedToGoogleFit">Added to Google Fit</string>
    <string name="problemAddingToGoogleFit">There was a problem adding to Google Fit</string>

</resources>